06_PARKCHANGJUN/04_k8s/section06/react006ser.yml
apiVersion: v1
kind: Service
metadata:
  name: react006ser
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3000
  selector:
    app: react006kube
