06_PARKCHANGJUN/04_k8s/section06/ingress006.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress006
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react006ser
                port:
                  number: 8000
